# webpki-roots-patcher

./: .pre-commit-config.yaml  Cargo.toml  README.md  justfile  rustfmt.toml  test-patcher
src/: lib.rs  memory.rs
test-binary/: Cargo.toml
test-binary/src/: main.rs
