[package]
name = "test-binary"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.22", default-features = false, features = ["native-tls", "rustls-tls-native-roots", "rustls-tls-webpki-roots"] }
tokio = { version = "1.47.0", features = ["full"] }
