[package]
name = "test-binary"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls", "rustls"] }
rustls = { version = "0.23.40", default-features = false }
rustls-native-certs = "0.8.4"
tokio = { version = "1.47.0", features = ["full"] }
webpki-roots = "1.0.8"
